--- a/assteroid.html
+++ b/assteroid.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="assteroid.css">
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
 
     </style>
