--- a/assteroidsgame.html
+++ b/assteroidsgame.html
@@ -16,7 +16,7 @@ function startGame() {
 
 let myGameArea = {
     canvas : document.createElement("canvas"),
-    start : function() {
+    start : function() { // initialize the game
         this.canvas.width = 900;
         this.canvas.height = 580;
         this.context = this.canvas.getContext("2d");
@@ -30,18 +30,22 @@ let myGameArea = {
 }
 
 function assteroid() {
-    this.x = Math.random() * myGameArea.canvas.width + 100;
-    this.y = Math.random() * myGameArea.canvas.height + 100;
+    // create assteroid object
+    this.x = Math.random() * myGameArea.canvas.width + 100; // x coordinate
+    this.y = Math.random() * myGameArea.canvas.height + 100; // y coordinate
     this.width = Math.random() * 30 + 10;
-    this.speedx = (Math.random() * 2 % 2) === 0 ? Math.floor(Math.random() * 4) : Math.floor(Math.random() * 4) * -1;
+    this.speedx = (Math.random() * 2 % 2) === 0 ? Math.floor(Math.random() * 4) : Math.floor(Math.random() * 4) * -1; // horizontal speed
     this.speedy = (Math.random() * 2 % 2) === 0 ? Math.floor(Math.random() * 4) : Math.floor(Math.random() * 4) * -1;
     ctx = myGameArea.context;
-    ctx.beginPath();
+    ctx.beginPath(); // draw circle
     ctx.arc(this.x, this.y, 50, 0, Math.PI*2);
-    ctx.fillStyle = "#DD95AA";
+    ctx.fillStyle = "#DD95AA"; // color circle
     ctx.fill();
     ctx.closePath();
-    this.update = function() {
+    this.update = function() { // move and redraw assteroid
+        console.log("updating");
+        ctx.fillStyle = "#DD95AA";
+        ctx.fill();
         this.x += this.speedx;
         this.y += this.speedy;
         // update x and y positions using speedx and speedy 
@@ -58,20 +62,25 @@ function assteroid() {
 }
 
 function updateGameArea() {
+    // call this function to avoid leaving trailing paths and test if anything has crashed yet
     for (i = 0; i < assteroids.length; i += 1) {
         if (assteroids[i].crashed()) {
-            let loser = document.createElement("H1").appendChild(document.createTextNode("YOU LOST!"));
+            console.log("crash!");
+            let loser = document.createElement("H1").appendChild(document.createTextNode("YOU LOST!")); // I don't think this actually ends the game, it just appends an H1 tag to the document
             document.body.insertBefore(loser, document.body.childNodes[0]);
         } 
     }
-    myGameArea.clear();
-    myGameArea.frameNo += 1;
-    if (myGameArea.frameNo == 1 || everyinterval(150)) {
+    myGameArea.clear(); // refresh screen before updating assteroid drawings
+    myGameArea.frameNo += 1; 
+    console.log("assteroids:", assteroids);
+    if (myGameArea.frameNo == 1 || everyinterval(150)) { // every 150 ms draw a new assteroid and add it to our list of assteroids
+        console.log("pushing!", assteroids.length);
         assteroids.push(new assteroid());
     }
-    console.log(assteroids);
+    console.log("assteroids 2:", assteroids);
     for (i = 0; i < assteroids.length; i +=1) {
-        assteroids[i].update();
+        console.log("hi!");
+        assteroids[i].update(); // update all of our assteroids (change x and y positions)
     }
 }
 
