--- a/assteroidsgame.html
+++ b/assteroidsgame.html
@@ -7,14 +7,12 @@
 <script>
 
 var assteroids = [];
-var myScore;
-
 
 function startGame() {
     myGameArea.start();
 }
 
-let myGameArea = {
+var myGameArea = {
     canvas : document.createElement("canvas"),
     start : function() { // initialize the game
         this.canvas.width = 900;
@@ -22,7 +20,7 @@ let myGameArea = {
         this.context = this.canvas.getContext("2d");
         document.body.insertBefore(this.canvas, document.body.childNodes[0]);
         this.frameNo = 0;
-        this.interval = setInterval(updateGameArea, 30);
+        this.interval = setInterval(updateGameArea, 20);
         },
     clear : function() {
         this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
@@ -38,16 +36,15 @@ function assteroid() {
     this.speedy = (Math.random() * 2 % 2) === 0 ? Math.floor(Math.random() * 4) : Math.floor(Math.random() * 4) * -1;
     ctx = myGameArea.context;
     ctx.beginPath(); // draw circle
-    ctx.arc(this.x, this.y, 50, 0, Math.PI*2);
+    ctx.arc(this.x, this.y, this.width, 0, Math.PI*2);
+    ctx.closePath();
     ctx.fillStyle = "#DD95AA"; // color circle
     ctx.fill();
-    ctx.closePath();
     this.update = function() { // move and redraw assteroid
-        console.log("updating");
-        ctx.fillStyle = "#DD95AA";
-        ctx.fill();
         this.x += this.speedx;
         this.y += this.speedy;
+        ctx.fillStyle = "#DD95AA"; // color circle
+        ctx.fill();
         // update x and y positions using speedx and speedy 
     }
     this.crashed = function() {
@@ -63,25 +60,25 @@ function assteroid() {
 
 function updateGameArea() {
     // call this function to avoid leaving trailing paths and test if anything has crashed yet
-    for (i = 0; i < assteroids.length; i += 1) {
+    /*for (i = 0; i < assteroids.length; i += 1) {
         if (assteroids[i].crashed()) {
             console.log("crash!");
-            let loser = document.createElement("H1").appendChild(document.createTextNode("YOU LOST!")); // I don't think this actually ends the game, it just appends an H1 tag to the document
+            var loser = document.createElement("H1").appendChild(document.createTextNode("YOU LOST!")); // I don't think this actually ends the game, it just appends an H1 tag to the document
             document.body.insertBefore(loser, document.body.childNodes[0]);
         } 
     }
-    myGameArea.clear(); // refresh screen before updating assteroid drawings
+    //myGameArea.clear(); // refresh screen before updating assteroid drawings*/
     myGameArea.frameNo += 1; 
-    console.log("assteroids:", assteroids);
-    if (myGameArea.frameNo == 1 || everyinterval(150)) { // every 150 ms draw a new assteroid and add it to our list of assteroids
-        console.log("pushing!", assteroids.length);
+    /*if (myGameArea.frameNo == 1 || everyinterval(150)) { // every 150 ms draw a new assteroid and add it to our list of assteroids
         assteroids.push(new assteroid());
-    }
-    console.log("assteroids 2:", assteroids);
-    for (i = 0; i < assteroids.length; i +=1) {
-        console.log("hi!");
+    }*/
+    if (myGameArea.frameNo === 1) assteroids.push(new assteroid());
+    assteroids[0].x += 1;
+    assteroids[0].y += 1;
+    console.log(assteroids[0].x, assteroids[0].y);
+    /*for (i = 0; i < assteroids.length; i +=1) {
         assteroids[i].update(); // update all of our assteroids (change x and y positions)
-    }
+    }*/
 }
 
 function everyinterval(n) {
