We have moving assteroids

--- a/assteroidsgame.html
+++ b/assteroidsgame.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <head>
 <title>Assteroids</title>
+<link rel="stylesheet" href="assteroid.css">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body onload="startGame()">
 
 <script>
 
 var assteroids = [];
+let done = false;
 
 function startGame() {
     myGameArea.start();
@@ -15,8 +19,8 @@ function startGame() {
 var myGameArea = {
     canvas : document.createElement("canvas"),
     start : function() { // initialize the game
-        this.canvas.width = 900;
-        this.canvas.height = 580;
+        this.canvas.width = 1200;
+        this.canvas.height = 800;
         this.context = this.canvas.getContext("2d");
         document.body.insertBefore(this.canvas, document.body.childNodes[0]);
         this.frameNo = 0;
@@ -24,7 +28,13 @@ var myGameArea = {
         },
     clear : function() {
         this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
-    }
+        },
+    end : function() {
+        console.log("crash!");
+        var loser = document.createElement("H1").appendChild(document.createTextNode("YOU LOST! Butt you saved", assteroids.length, "assteroids!")); // I don't think this actually ends the game, it just appends an H1 tag to the document
+        document.body.insertBefore(loser, document.body.childNodes[0]);
+        window.location.replace("assteroid.html");
+    } 
 }
 
 function assteroid() {
@@ -32,15 +42,15 @@ function assteroid() {
     this.x = Math.random() * myGameArea.canvas.width + 100; // x coordinate
     this.y = Math.random() * myGameArea.canvas.height + 100; // y coordinate
     this.width = Math.random() * 30 + 10;
-    this.speedx = (Math.random() * 2 % 2) === 0 ? Math.floor(Math.random() * 4) : Math.floor(Math.random() * 4) * -1; // horizontal speed
-    this.speedy = (Math.random() * 2 % 2) === 0 ? Math.floor(Math.random() * 4) : Math.floor(Math.random() * 4) * -1;
-    ctx = myGameArea.context;
-    ctx.beginPath(); // draw circle
-    ctx.arc(this.x, this.y, this.width, 0, Math.PI*2);
-    ctx.closePath();
-    ctx.fillStyle = "#DD95AA"; // color circle
-    ctx.fill();
+    this.speedx = (Math.random() * 2 % 2) === 0 ? Math.floor(Math.random() * 4 + 1) : Math.floor(Math.random() * 4 + 1) * -1; // horizontal speed
+    this.speedy = (Math.random() * 2 % 2) === 0 ? Math.floor(Math.random() * 4 + 1) : Math.floor(Math.random() * 4 + 1) * -1;
     this.update = function() { // move and redraw assteroid
+        ctx = myGameArea.context;
+        ctx.beginPath(); // draw circle
+        ctx.arc(this.x, this.y, this.width, 0, Math.PI*2);
+        ctx.closePath();
+        ctx.fillStyle = "#DD95AA"; // color circle
+        ctx.fill();
         this.x += this.speedx;
         this.y += this.speedy;
         ctx.fillStyle = "#DD95AA"; // color circle
@@ -50,8 +60,8 @@ function assteroid() {
     this.crashed = function() {
         // return true or false based on size and position... not very reliable
         for (i = 0; i < assteroids.length - 1; i += 1) {
-            if (Math.abs(assteroids[i].x - assteroids[i+1].x) < Math.max(assteroids[i].width) && Math.abs(assteroids[i].y - assteroids[i+1].y) < Math.max(assteroids[i].width)) {
-                return true;
+            if (assteroids[i].x + assteroids[i].width > myGameArea.canvas.width || assteroids[i].x < 0 || assteroids[i].y + assteroids[i].width > myGameArea.canvas.height || assteroids[i].y < 0) {
+                myGameArea.end();
             }
         }
         return false;
@@ -60,25 +70,23 @@ function assteroid() {
 
 function updateGameArea() {
     // call this function to avoid leaving trailing paths and test if anything has crashed yet
-    /*for (i = 0; i < assteroids.length; i += 1) {
+    for (i = 0; i < assteroids.length; i += 1) {
         if (assteroids[i].crashed()) {
             console.log("crash!");
             var loser = document.createElement("H1").appendChild(document.createTextNode("YOU LOST!")); // I don't think this actually ends the game, it just appends an H1 tag to the document
             document.body.insertBefore(loser, document.body.childNodes[0]);
         } 
     }
-    //myGameArea.clear(); // refresh screen before updating assteroid drawings*/
+    myGameArea.clear(); // refresh screen before updating assteroid drawings
     myGameArea.frameNo += 1; 
-    /*if (myGameArea.frameNo == 1 || everyinterval(150)) { // every 150 ms draw a new assteroid and add it to our list of assteroids
+    if (myGameArea.frameNo == 1 || everyinterval(150)) { // every 150 ms draw a new assteroid and add it to our list of assteroids
         assteroids.push(new assteroid());
-    }*/
+    }
     if (myGameArea.frameNo === 1) assteroids.push(new assteroid());
-    assteroids[0].x += 1;
-    assteroids[0].y += 1;
     console.log(assteroids[0].x, assteroids[0].y);
-    /*for (i = 0; i < assteroids.length; i +=1) {
+    for (i = 0; i < assteroids.length; i +=1) {
         assteroids[i].update(); // update all of our assteroids (change x and y positions)
-    }*/
+    }
 }
 
 function everyinterval(n) {
