--- a/assteroidsgame.html
+++ b/assteroidsgame.html
@@ -7,7 +7,8 @@
 </head>
 <body onload="startGame()">
 
-<script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script type="text/javascript">
 
 var assteroids = [];
 let done = false;
@@ -31,7 +32,6 @@ var myGameArea = {
         this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
     },
     end : function() {
-        console.log("crash!");
         var loser = document.createElement("H1").appendChild(document.createTextNode("YOU LOST! Butt you saved", assteroids.length, "assteroids!")); // I don't think this actually ends the game, it just appends an H1 tag to the document
         document.body.innerHTML = loser;
         this.done = true;
@@ -42,20 +42,15 @@ function assteroid() {
     var butt = document.createElement("img");
     butt.setAttribute('src', 'assteroid_v2.png');
     butt.setAttribute('class', 'overlays');
+    butt.setAttribute('id', assteroids.indexOf(this));
     document.body.appendChild(butt);
-    // create assteroid object
     this.x = Math.random() * myGameArea.canvas.width + 100; // x coordinate
     this.y = Math.random() * myGameArea.canvas.height + 100; // y coordinate
-    this.width = Math.random() * 30 + 10;
+    this.width = Math.random() * 100 + 100;
+    butt.setAttribute('width', this.width);
     this.speedx = (Math.random() * 2 % 2) === 0 ? Math.floor(Math.random() * 4 + 1) : Math.floor(Math.random() * 4 + 1) * -1; // horizontal speed
     this.speedy = (Math.random() * 2 % 2) === 0 ? Math.floor(Math.random() * 4 + 1) : Math.floor(Math.random() * 4 + 1) * -1;
     this.update = function() { // move and redraw assteroid
-        // ctx = myGameArea.context;
-        // ctx.beginPath(); // draw circle
-        // ctx.arc(this.x, this.y, this.width, 0, Math.PI*2);
-        // ctx.closePath();
-        // ctx.fillStyle = "#DD95AA"; // color circle
-        // ctx.fill();
         this.x += this.speedx;
         this.y += this.speedy;
         butt.style.left = this.x + "px";
@@ -73,6 +68,12 @@ function assteroid() {
     }
 }
 
+$('img').on('click', function() {
+    console.log("hi!");
+    angle = 90;
+    $('#'+assteroids.indexOf(this)).css('transform');
+});
+
 function updateGameArea() {
     if (!done) {
         // call this function to avoid leaving trailing paths and test if anything has crashed yet
@@ -87,7 +88,6 @@ function updateGameArea() {
             assteroids.push(new assteroid());
         }
         if (myGameArea.frameNo === 1) assteroids.push(new assteroid());
-        console.log(assteroids[0].x, assteroids[0].y);
         for (i = 0; i < assteroids.length; i +=1) {
             assteroids[i].update(); // update all of our assteroids (change x and y positions)
         }
