--- a/assteroidsgame.html
+++ b/assteroidsgame.html
@@ -12,6 +12,7 @@
 
 var assteroids = [];
 let done = false;
+let index = 0;
 
 function startGame() {
     myGameArea.start();
@@ -38,21 +39,23 @@ var myGameArea = {
     } 
 }
 
+
 function assteroid() {
     var butt = document.createElement("img");
     butt.setAttribute('src', 'assteroid_v2.png');
     butt.setAttribute('class', 'overlays');
-    butt.setAttribute('id', assteroids.indexOf(this));
+    butt.setAttribute('id', index);
+    index++;
     document.body.appendChild(butt);
     this.x = Math.random() * myGameArea.canvas.width + 100; // x coordinate
     this.y = Math.random() * myGameArea.canvas.height + 100; // y coordinate
-    this.width = Math.random() * 100 + 100;
+    this.width = Math.random() * 100 + 150;
     butt.setAttribute('width', this.width);
     this.speedx = (Math.random() * 2 % 2) === 0 ? Math.floor(Math.random() * 4 + 1) : Math.floor(Math.random() * 4 + 1) * -1; // horizontal speed
     this.speedy = (Math.random() * 2 % 2) === 0 ? Math.floor(Math.random() * 4 + 1) : Math.floor(Math.random() * 4 + 1) * -1;
     this.update = function() { // move and redraw assteroid
         this.x += this.speedx;
-        this.y += this.speedy;
+        //this.y += this.speedy;
         butt.style.left = this.x + "px";
         butt.style.top = this.y + "px";
         // update x and y positions using speedx and speedy 
@@ -66,25 +69,39 @@ function assteroid() {
         }
         return false;
     }
+    butt.onclick = function() {
+        angle = 180;
+        console.log("hi!", this);
+        $(this).css('transform', 'rotate(' + angle + 'deg)');
+    }
 }
 
-$('img').on('click', function() {
-    console.log("hi!");
-    angle = 90;
-    $('#'+assteroids.indexOf(this)).css('transform');
-});
+function getRotationDegrees(obj) {
+    var matrix = obj.css("-webkit-transform") ||
+    obj.css("-moz-transform")    ||
+    obj.css("-ms-transform")     ||
+    obj.css("-o-transform")      ||
+    obj.css("transform");
+    if(matrix !== 'none') {
+        var values = matrix.split('(')[1].split(')')[0].split(',');
+        var a = values[0];
+        var b = values[1];
+        var angle = Math.round(Math.atan2(b, a) * (180/Math.PI));
+    } else { var angle = 0; }
+    return (angle < 0) ? angle + 360 : angle;
+}
 
 function updateGameArea() {
     if (!done) {
         // call this function to avoid leaving trailing paths and test if anything has crashed yet
-        for (i = 0; i < assteroids.length; i += 1) {
+        /*for (i = 0; i < assteroids.length; i += 1) {
             if (assteroids[i].crashed()) {
                 myGameArea.end();
             } 
-        }
+        }*/
         myGameArea.clear(); // refresh screen before updating assteroid drawings
         myGameArea.frameNo += 1; 
-        if (myGameArea.frameNo == 1 || everyinterval(150)) { // every 150 ms draw a new assteroid and add it to our list of assteroids
+        if (myGameArea.frameNo == 1 || everyinterval(100)) { // every 150 ms draw a new assteroid and add it to our list of assteroids
             assteroids.push(new assteroid());
         }
         if (myGameArea.frameNo === 1) assteroids.push(new assteroid());
