--- a/assteroidsgame.html
+++ b/assteroidsgame.html
@@ -48,7 +48,7 @@ function assteroid() {
     index++;
     document.body.appendChild(butt);
     this.x = -99; // x coordinate
-    this.y = Math.random() * myGameArea.canvas.height + 100; // y coordinate
+    this.y = Math.random() * (myGameArea.canvas.height - 200) + 100; // y coordinate
     this.width = Math.random() * 100 + 150;
     butt.setAttribute('width', this.width);
     this.speedx = Math.floor(Math.random() * 5) + 2; // horizontal speed
@@ -62,7 +62,7 @@ function assteroid() {
     this.crashed = function() {
         // return true or false based on size and position... not very reliable
         for (i = 0; i < assteroids.length - 1; i += 1) {
-            if (assteroids[i].x + assteroids[i].width > myGameArea.canvas.width || assteroids[i].x < -1 * assteroids[i].width) {
+            if (assteroids[i].x + assteroids[i].width - 40 > myGameArea.canvas.width || assteroids[i].x < -1 * assteroids[i].width) {
                 return true;
             }
         }
