--- a/assteroid.html
+++ b/assteroid.html
@@ -14,11 +14,14 @@
     <body>
 
       <div id="head"><h1> Welcome to ASSTEROID</h1></div>
+      <img src="ASSTEROID.png" width="300" height="200" alt="assteroid image" style="display: block; margin: auto; margin-bottom: 0;">
 
+    <div class="buttons">
   <a href="assteroidsgame.html" class="button button1">Press start</a>
   <a href="#" class="button button2">Scores</a>
   <a href="#" class="button button3">Setting</a>
   <a href="#" class="button button3">Help</a>
   </body>
+  </div>
 
   </html>
