fixing random y values

--- a/assteroidsgame.html
+++ b/assteroidsgame.html
@@ -48,7 +48,7 @@ function assteroid() {
     index++;
     document.body.appendChild(butt);
     this.x = -99; // x coordinate
-    this.y = Math.random() * (myGameArea.canvas.height - 200) + 100; // y coordinate
+    this.y = Math.random() * (myGameArea.canvas.height - 250); // y coordinate
     this.width = Math.random() * 100 + 150;
     butt.setAttribute('width', this.width);
     this.speedx = Math.floor(Math.random() * 5) + 2; // horizontal speed
