--- a/assteroidsgame.html
+++ b/assteroidsgame.html
@@ -34,7 +34,7 @@ var myGameArea = {
     },
     end : function() {
         console.log("replace");
-        window.location = "https://www.plannedparenthood.org/educators/implementing-sex-education";
+        window.location = "http://www.patienteducationcenter.org/articles/sexually-transmitted-diseases-stds/";
     } 
 }
 
