--- a/assteroid.html
+++ b/assteroid.html
@@ -16,12 +16,25 @@
       <div id="head"><h1> Welcome to ASSTEROID</h1></div>
       <img src="ASSTEROID.png" width="300" height="200" alt="assteroid image" style="display: block; margin: auto; margin-bottom: 0;">
 
-    <div class="buttons">
-  <a href="assteroidsgame.html" class="button button1">Press start</a>
-  <a href="#" class="button button2">Scores</a>
-  <a href="#" class="button button3">Setting</a>
-  <a href="#" class="button button3">Help</a>
+    
+      <div id="button-menu"></div>
+
+      <!-- <div id="react-root"></div> -->
+
+
+      <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+      <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    
+      <!-- Load our React component. -->
+      <!-- <script src="like_button.react.js"></script> -->
+      <script type="module" src="GameComponent.react.js"></script>
+      <script type="module" src="ButtonMenuComponent.react.js"></script>
+      <script src="ButtonComponent.react.js"></script>
+      <script src="AssteroidComponent.react.js"></script>
+
+
+
   </body>
-  </div>
+ 
 
   </html>
