--- a/assteroidsgame.html
+++ b/assteroidsgame.html
@@ -6,6 +6,7 @@
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body onload="startGame()">
+    <div id="react-root"></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript">
@@ -125,14 +126,14 @@ function updateGameArea() {
         // call this function to avoid leaving trailing paths and test if anything has crashed yet
        
         //death code
-        for (let [key, value] of assteroids){
-            if (value.crashed()) {
-                alert("You lost!");
-                done = true;
-                myGameArea.end();
-                break;
-            } 
-        }
+        // for (let [key, value] of assteroids){
+        //     if (value.crashed()) {
+        //         alert("You lost!");
+        //         done = true;
+        //         myGameArea.end();
+        //         break;
+        //     } 
+        // }
       
         myGameArea.clear(); // refresh screen before updating assteroid drawings
         myGameArea.frameNo += 1; 
